BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Profiling_Question_BMS__c.object
<CustomObject>
    <description>Profiling Questions and Answers</description>
    <fields>
        <fullName>A1A_Yervoy__c</fullName>
        <description>How many unresectable or metastatic patients does the HCP see in a year?</description>
        <label>A1(a)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A1B_Yervoy__c</fullName>
        <description>How many unresectable or metastatic patients does the HCP place on Yervoy in a year?</description>
        <label>A1(b)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A1_Erbitux_CRC__c</fullName>
        <label>A1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Increased interest in tumor type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Normal level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes-- Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes –Increased interest in tumor type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes – Normal level</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A1_Erbitux_H_N_NonRad__c</fullName>
        <description>Does the prescriber treat patients with SCCHN?</description>
        <label>A1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A1_Erbitux_H_N_Rad__c</fullName>
        <description>Does the prescriber treat patients with SCCHN?</description>
        <label>A1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A1_Ixempra__c</fullName>
        <description>Does the prescriber treat patients with metastatic Breast Cancer ?</description>
        <label>A1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A1_Sprycel__c</fullName>
        <description>Does this physician treat at least one or more CML patients per year?</description>
        <label>A1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A2_Erbitux_CRC__c</fullName>
        <description>Number of new metastatic patients treated per year (either recurrent metastatic or newly diagnosed metastatic)?</description>
        <label>A2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A2_Erbitux_H_N_NonRad__c</fullName>
        <description>Approximately how many unique SCCHN patients per year does the prescriber treat with Systemic Therapy?</description>
        <label>A2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A2_Erbitux_H_N_Rad__c</fullName>
        <description>Approximately how many unique SCCHN patients per year does the prescriber treat with Systemic Therapy?</description>
        <label>A2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A2_Ixempra__c</fullName>
        <description>Approximately how many unique metastatic Breast Cancer patients per year does the prescriber treat with chemotherapy?</description>
        <label>A2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A2_Sprycel__c</fullName>
        <description>How many CML patients does this prescriber manage as the primary Oncologist/Hematologist ? Please include all CML patients, not just newly diagnosed ones.</description>
        <label>A2</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A2_Yervoy__c</fullName>
        <description>Would you treat a metastatic melanoma patient that came into your office?</description>
        <label>A2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A3_Erbitux_CRC__c</fullName>
        <description>Is this prescriber influential in the treatment of CRC?</description>
        <label>A3</label>
        <picklist>
            <picklistValues>
                <fullName>Yes (national influencer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes (regional influencer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes (local influencer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A3_Erbitux_H_N_NonRad__c</fullName>
        <description>Is the prescriber influential in the treatment of SCCHN?</description>
        <label>A3</label>
        <picklist>
            <picklistValues>
                <fullName>Yes (national influencer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes (regional influencer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes (local influencer )</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A3_Erbitux_H_N_Rad__c</fullName>
        <description>Is the prescriber influential in the treatment of SCCHN?</description>
        <label>A3</label>
        <picklist>
            <picklistValues>
                <fullName>Yes (National Influencer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes (Regional Influencer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes (Local Influencer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A3_Ixempra__c</fullName>
        <description>Approximately how many patients has the prescriber treated with Ixempra in the last 6 months?</description>
        <label>A3</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A3_Sprycel__c</fullName>
        <description>How many unique Ph+ ALL patients does this prescriber see per year?</description>
        <inlineHelpText>How many unique Ph+ ALL patients does this prescriber see per year?</inlineHelpText>
        <label>A3</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know at this time, but will investigate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A4A_Erbitux_H_N_NonRad__c</fullName>
        <description>Approximately what percent (%) of the physician’s SCCHN patients are locally Advanced vs. Recurrent or Metastatic?</description>
        <inlineHelpText>% Locally Advanced SCCHN</inlineHelpText>
        <label>A4(a)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A4B_Erbitux_H_N_NonRad__c</fullName>
        <description>Approximately what percent (%) of the physician’s SCCHN patients are locally Advanced vs. Recurrent or Metastatic?</description>
        <inlineHelpText>% Recurrent or Metastatic (R/M) SCCHN (Should Total 100%)</inlineHelpText>
        <label>A4(b)</label>
        <picklist>
            <controllingField>A4A_Erbitux_H_N_NonRad__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Profiling Questions</relationshipLabel>
        <relationshipName>Profiling_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_BMS__c</fullName>
        <description>External ID for Profiling questions. The format is: &lt;Account ID&gt;__&lt;Profiling Question Record Type Name&gt;</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q1A_Yervoy__c</fullName>
        <defaultValue>&quot;How many unresectable or metastatic patients does the HCP see in a year?&quot;</defaultValue>
        <description>How many unresectable or metastatic patients does the HCP see in a year?</description>
        <inlineHelpText>How many unresectable or metastatic patients does the HCP see in a year?</inlineHelpText>
        <label>Q1(a)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q1B_Yervoy__c</fullName>
        <defaultValue>&quot;How many unresectable or metastatic patients does the HCP place on Yervoy in a year?&quot;</defaultValue>
        <description>How many unresectable or metastatic patients does the HCP place on Yervoy in a year?</description>
        <inlineHelpText>How many unresectable or metastatic patients does the HCP place on Yervoy in a year?</inlineHelpText>
        <label>Q1(b)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q1_Erbitux_CRC__c</fullName>
        <defaultValue>&quot;Does this prescriber treat CRC?&quot;</defaultValue>
        <description>Does this prescriber treat CRC?</description>
        <inlineHelpText>Does this prescriber treat CRC?</inlineHelpText>
        <label>Q1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q1_Erbitux_H_N_NonRad__c</fullName>
        <defaultValue>&quot;Does the prescriber treat patients with SCCHN?&quot;</defaultValue>
        <description>Does the prescriber treat patients with SCCHN?</description>
        <inlineHelpText>Does the prescriber treat patients with SCCHN?</inlineHelpText>
        <label>Q1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q1_Erbitux_H_N_Rad__c</fullName>
        <defaultValue>&quot;Does the prescriber treat patients with SCCHN?&quot;</defaultValue>
        <description>Does the prescriber treat patients with SCCHN?</description>
        <inlineHelpText>Does the prescriber treat patients with SCCHN?</inlineHelpText>
        <label>Q1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q1_Ixempra__c</fullName>
        <defaultValue>&quot;Does the prescriber treat patients with metastatic Breast Cancer ?&quot;</defaultValue>
        <description>Does the prescriber treat patients with metastatic Breast Cancer ?</description>
        <inlineHelpText>Does the prescriber treat patients with metastatic Breast Cancer ?</inlineHelpText>
        <label>Q1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q1_Sprycel__c</fullName>
        <defaultValue>&quot;Does this physician treat at least one or more CML patients per year?&quot;</defaultValue>
        <description>Does this physician treat at least one or more CML patients per year?</description>
        <inlineHelpText>Does this physician treat at least one or more CML patients per year?</inlineHelpText>
        <label>Q1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q2_Erbitux_CRC__c</fullName>
        <defaultValue>&quot;Number of new metastatic patients treated per year (either recurrent metastatic or newly diagnosed metastatic)?&quot;</defaultValue>
        <description>Number of new metastatic patients treated per year (either recurrent metastatic or newly diagnosed metastatic)?</description>
        <inlineHelpText>Number of new metastatic patients treated per year (either recurrent metastatic or newly diagnosed metastatic)?</inlineHelpText>
        <label>Q2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q2_Erbitux_H_N_NonRad__c</fullName>
        <defaultValue>&quot;Approximately how many unique SCCHN patients per year does the prescriber treat with Systemic Therapy?&quot;</defaultValue>
        <description>Approximately how many unique SCCHN patients per year does the prescriber treat with Systemic Therapy?</description>
        <inlineHelpText>Approximately how many unique SCCHN patients per year does the prescriber treat with Systemic Therapy?</inlineHelpText>
        <label>Q2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q2_Erbitux_H_N_Rad__c</fullName>
        <defaultValue>&quot;Approximately how many unique SCCHN patients per year does the prescriber treat with Systemic Therapy?&quot;</defaultValue>
        <description>Approximately how many unique SCCHN patients per year does the prescriber treat with Systemic Therapy?</description>
        <inlineHelpText>Approximately how many unique SCCHN patients per year does the prescriber treat with Systemic Therapy?</inlineHelpText>
        <label>Q2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q2_Ixempra__c</fullName>
        <defaultValue>&quot;Approximately how many unique metastatic Breast Cancer patients per year does the prescriber treat with chemotherapy?&quot;</defaultValue>
        <description>Approximately how many unique metastatic Breast Cancer patients per year does the prescriber treat with chemotherapy?</description>
        <inlineHelpText>Approximately how many unique metastatic Breast Cancer patients per year does the prescriber treat with chemotherapy?</inlineHelpText>
        <label>Q2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q2_Sprycel__c</fullName>
        <defaultValue>&quot;How many CML patients does this prescriber manage as the primary Oncologist/Hematologist ? Please include all CML patients, not just newly diagnosed ones.&quot;</defaultValue>
        <description>How many CML patients does this prescriber manage as the primary Oncologist/Hematologist ? Please include all CML patients, not just newly diagnosed ones.</description>
        <inlineHelpText>How many CML patients does this prescriber manage as the primary Oncologist/Hematologist ? Please include all CML patients, not just newly diagnosed ones.</inlineHelpText>
        <label>Q2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q2_Yervoy__c</fullName>
        <defaultValue>&quot;Would you treat a metastatic melanoma patient that came into your office?&quot;</defaultValue>
        <description>Would you treat a metastatic melanoma patient that came into your office?</description>
        <inlineHelpText>Would you treat a metastatic melanoma patient that came into your office?</inlineHelpText>
        <label>Q2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q3_Erbitux_CRC__c</fullName>
        <defaultValue>&quot;Is this prescriber influential in the treatment of CRC?&quot;</defaultValue>
        <description>Is this prescriber influential in the treatment of CRC?</description>
        <inlineHelpText>Is this prescriber influential in the treatment of CRC?</inlineHelpText>
        <label>Q3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q3_Erbitux_H_N_NonRad__c</fullName>
        <defaultValue>&quot;Is the prescriber influential in the treatment of SCCHN?&quot;</defaultValue>
        <description>Is the prescriber influential in the treatment of SCCHN?</description>
        <inlineHelpText>Is the prescriber influential in the treatment of SCCHN?</inlineHelpText>
        <label>Q3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q3_Erbitux_H_N_Rad__c</fullName>
        <defaultValue>&quot;Is the prescriber influential in the treatment of SCCHN?&quot;</defaultValue>
        <description>Is the prescriber influential in the treatment of SCCHN?</description>
        <inlineHelpText>Is the prescriber influential in the treatment of SCCHN?</inlineHelpText>
        <label>Q3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q3_Ixempra__c</fullName>
        <defaultValue>&quot;Approximately how many patients has the prescriber treated with Ixempra in the last 6 months?&quot;</defaultValue>
        <description>Approximately how many patients has the prescriber treated with Ixempra in the last 6 months?</description>
        <inlineHelpText>Approximately how many patients has the prescriber treated with Ixempra in the last 6 months?</inlineHelpText>
        <label>Q3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q3_Sprycel__c</fullName>
        <defaultValue>&quot;How many unique Ph+ ALL patients does this prescriber see per year?&quot;</defaultValue>
        <description>How many unique Ph+ ALL patients does this prescriber see per year?</description>
        <inlineHelpText>How many unique Ph+ ALL patients does this prescriber see per year?</inlineHelpText>
        <label>Q3</label>
        <type>TextArea</type>
    </fields>
    <label>Profiling Question</label>
    <nameField>
        <displayFormat>PQ-{0000}</displayFormat>
        <label>Profiling Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profiling Questions</pluralLabel>
    <recordTypes>
        <fullName>Erbitux_CRC_Prescribers</fullName>
        <active>true</active>
        <description>Erbitux CRC – Profiling questions used for Prescriber Valuation</description>
        <label>Erbitux CRC(Prescribers)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Erbitux_H_N_Radiation_Oncologists</fullName>
        <active>true</active>
        <description>Erbitux H&amp;N (Radiation Oncologists)</description>
        <label>Erbitux H&amp;N (Radiation Oncologists)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Erbitux_H_N_non_Radiation_Oncologists</fullName>
        <active>true</active>
        <description>Erbitux H&amp;N (non-Radiation Oncologists)</description>
        <label>Erbitux H&amp;N (non-Radiation Oncologists)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ixempra_Prescribers</fullName>
        <active>true</active>
        <description>Ixempra_Prescribers - Profiling questions used for Prescriber Valuation</description>
        <label>Ixempra (Prescribers)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sprycel_Prescribers</fullName>
        <active>true</active>
        <description>Sprycel_Prescribers - Profiling questions used for Prescriber Valuation</description>
        <label>Sprycel (Prescribers)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Yervoy_Non_Prescribers</fullName>
        <active>true</active>
        <description>Yervoy_Non-Prescribers - Profiling questions used for Non-Prescriber Valuation</description>
        <label>Yervoy (Non-Prescribers)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Yervoy_Prescribers</fullName>
        <active>true</active>
        <description>Yervoy_Prescribers - Profiling questions used for Prescriber Valuation</description>
        <label>Yervoy (Prescribers)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PQ_A1A_Yervoy_ValidateNumber</fullName>
        <active>true</active>
        <description>PQ_A1A_Yervoy_ValidateNumber - Negative Number not Allowed</description>
        <errorConditionFormula>A1A_Yervoy__c &lt; 0</errorConditionFormula>
        <errorMessage>Profiling Questions: Invalid Number in your Answer for Yervoy A1A</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PQ_A1B_Yervoy_ValidateNumber</fullName>
        <active>true</active>
        <description>PQ_A1B_Yervoy_ValidateNumber - Negative Number not Allowed</description>
        <errorConditionFormula>A1B_Yervoy__c &lt; 0</errorConditionFormula>
        <errorMessage>Profiling Questions: Invalid Number in your Answer for Yervoy A1B</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PQ_A2_Erbitux_CRC_ValidateNumber</fullName>
        <active>true</active>
        <description>PQ_A2_Erbitux_CRC_ValidateNumber - Negative Number not Allowed</description>
        <errorConditionFormula>A2_Erbitux_CRC__c &lt; 0</errorConditionFormula>
        <errorMessage>Profiling Questions: Invalid Number in your Answer for Erbitux CRC A2</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PQ_A2_Erbitux_H_N_NonRad_ValidateNumber</fullName>
        <active>true</active>
        <description>PQ_A2_Erbitux_H_N_NonRad_ValidateNumber - Negative Number not Allowed</description>
        <errorConditionFormula>A2_Erbitux_H_N_NonRad__c &lt; 0</errorConditionFormula>
        <errorMessage>Profiling Questions: Invalid Number in your Answer for Erbitux HDNK Non-Radiology A2</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PQ_A2_Erbitux_H_N_Rad_ValidateNumber</fullName>
        <active>true</active>
        <description>PQ_A2_Erbitux_H_N_Rad_ValidateNumber - Negative Number not Allowed</description>
        <errorConditionFormula>A2_Erbitux_H_N_Rad__c &lt; 0</errorConditionFormula>
        <errorMessage>Profiling Questions: Invalid Number in your Answer for Erbitux HDNK Radiology A2</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PQ_A2_Ixempra_ValidateNumber</fullName>
        <active>true</active>
        <description>PQ_A2_Ixempra_ValidateNumber - Negative Number not Allowed</description>
        <errorConditionFormula>A2_Ixempra__c &lt; 0</errorConditionFormula>
        <errorMessage>Profiling Questions: Invalid Number in your Answer for Ixempra A2</errorMessage>
    </validationRules>
</CustomObject>